src/test/ui/fn/implied-bounds-unnorm-associated-type-3.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/implied-bounds-unnorm-associated-type-3.rs:19:5
   |
LL |     fn zero_copy_from<'b>(cart: &'b [T]) -> &'b [T] {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `T: 'static`...
   = note: ...so that the type `[T]` will meet its required lifetime bounds

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
